# burg-implementation-experiments

./: .gitignore  LICENSE  README.md
scripts/cpp/: run.sh  test.cpp
scripts/js/convert/: index.mjs  lib.mjs  package-lock.json  package.json
scripts/js/run/: package-lock.json  package.json
scripts/js/run/src/: burg.mjs  command.mjs  config.mjs  error.mjs  exec.mjs  index.mjs  string-utils.mjs  utils.mjs
v1/: .gitignore  CMakeLists.txt
v1/data-anlysis/: process_ar_error.py  process_ar_error_mae.py  process_ar_models.py  process_ar_models_cumulative_fit_error.py  process_ar_models_timing.py
v1/data-anlysis/config/: __init__.py  config.py
v1/data-anlysis/utils/: __init__.py  files.py  lists.py
v1/dataset/: README.md
v1/dataset-processed-burg_optimized_den_sqrt_double/: README.md
v1/docs/: burg.md
v1/results-long-predictions_double/: burg-optimized-den-1678792461745.json  burg-optimized-den-fast_math-1678792563529.json  compensated-burg-optimized-den-1678792512746.json  compensated-burg-optimized-den-fast_math-1678792614530.json
v1/src/: burg_basic.hpp  burg_optimized_den.hpp  burg_optimized_den_sqrt.hpp  compensated_burg_basic.hpp  compensated_burg_optimized_den.hpp  compensated_burg_optimized_den_sqrt.hpp  la.hpp  logger.hpp  main-error.cpp  main.cpp  precise_la.hpp  statistic.hpp  timer.cpp  timer.hpp  tty.cpp  tty.hpp  type_details.hpp  utils.hpp  wav.hpp
